atualizacao de responsividade

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Minha apresentação</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -32,9 +32,10 @@
                     emocionante no desenvolvimento de software.</p>
                 <div class="redes-sociais">
                     <a href="https://github.com/Luizfrr"><i class="fa-brands fa-github"></i></a>
-                    <a href="www.linkedin.com/in/luizfrr"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/luizfrr"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <button class="btn" id="projetos">Projetos</button>
+                <img class="imagem-direita" src="/eupng.png" alt="">
             </div>
         </div>
     </div>
