--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <div class="cabecalho-link">
                 <li>
-                    <a href="">Home</a>
-                    <a href="">Sobre</a>
+                    <a href="index.html">Home</a>
+                    <a href="sobre.html">Sobre</a>
                 </li>
                 <button id="meucontato">Meu contato</button>
             </div>
