--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="text">
                 <h3>Olá pessoal</h3>
                 <h1>Eu sou <span>Luiz Guilherme</span></h1>
-                <p>Sou estudante de Engenharia da Computação na UEFS, com um sólido entendimento em Python,
-                    conhecimento básico em Java e estudo atual em C. Ao longo da minha jornada acadêmica e em
-                    projetos pessoais, adquiri experiência, inclusive com bancos de dados SQL e ferramentas como Git.
+                <p>Sou estudante de Desenvolvimento de Sistemas no SENAI, com um sólido entendimento em Python,
+                    estudando atualmente cybersegurança. Ao longo da minha jornada acadêmica, adquiri experiências
+                    com projetos pessoais, utilizando SQL e ferramentas como Git.
                     Tenho uma habilidade para resolver problemas e uma capacidade de aprender novos conceitos
-                    rapidamente. Minha paixão pela programação é o que me impulsiona a buscar uma carreira
+                    rapidamente. Minha paixão pela área é o que me impulsiona a buscar uma carreira
                     emocionante no desenvolvimento de software.</p>
                 <div class="redes-sociais">
                     <a href="https://github.com/Luizfrr"><i class="fa-brands fa-github"></i></a>
