--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="https://github.com/Luizfrr"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/luizfrr"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <button class="btn" id="projetos">Projetos</button>
+                <button class="btn" id="projetos">Recursos</button>
                 <img class="imagem-direita" src="/eupng.png" alt="">
             </div>
         </div>
