--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="cabecalho-link">
                 <li>
                     <a href="index.html">Home</a>
-                    <a href="sobre.html">Sobre</a>
+                    <a href="sobre.html" style="display: none;">Sobre</a>
                 </li>
                 <button id="meucontato">Meu contato</button>
             </div>
