style: ajuste do txt do h1 habilidades

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="bg-sky-50 py-8">
         <div class="flex flex-col justify-center items-center p-4 py-14">
             <h1 class="text-3xl font-medium text-black">Habilidades</h1>
-            <p class="py-4 text-black">Atualmente sou estudante na área de Desenvolvimento de Sistemas com foco em back-end, e venho desenvolvendo projetos próprios para aplicar <br> e fortalecer meus conhecimentos. Abaixo está uma visão geral das principais tecnologias e ferramentas com as quais tenho trabalhado.</p>
+            <p class="py-4 text-black text-justify text-center">Atualmente sou estudante na área de Desenvolvimento de Sistemas com foco em back-end, e venho desenvolvendo projetos próprios para aplicar <br> e fortalecer meus conhecimentos. Abaixo está uma visão geral das principais tecnologias e ferramentas com as quais tenho trabalhado.</p>
         </div>
 
         <div class="grid grid-cols-1  gap-8 m-10 sm:grid-cols-3">
