--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
             </div>
 
             <div class="bg-white shadow-xl">
-                <img src="/imgs/todolistprint.png" alt="" class="blur-[5px] brightness-50">
+                <img src="/imgs/storeprint.png" alt="" class="">
                 <div class="flex justify-center items-center">
-                    <h3 class="py-2 font-medium">Vazio</h3>
+                    <h3 class="py-2 font-medium">LaBelle Store - Only Preview</h3>
                 </div>
-                <div class="grid grid-cols-4 gap-2 p-4">
+                <div class="grid grid-cols-1 gap-2 p-4">
+                    <p class="text-center bg-black p-2 rounded-full text-white">Tailwind</p>
                 </div>
+                <div class="flex justify-center items-center"><a href="https://web-store-frr.netlify.app/" class=" transition hover:text-blue-500">Link</a></div>
+
             </div>
 
             <div class="bg-white shadow-xl">
