--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
                     <p class="text-center bg-black p-2 rounded-full text-white">Flask</p>
                     <p class="text-center bg-black p-2 rounded-full text-white">Tailwind</p>
                 </div>
-                <div class="flex justify-center items-center"><a href="https://github.com/Luizfrr/to-do-list" class=" transition hover:text-blue-500">Link</a></div>
+                <div class="flex justify-center items-center">
+                    <a href="https://to-do-list-bl34.onrender.com" class=" transition hover:text-blue-500">Demo</a>
+                    <span class="mx-2">|</span>
+                    <a href="https://github.com/Luizfrr/to-do-list" class=" transition hover:text-blue-500">Código</a>
+                </div>
             </div>
 
             <div class="bg-white shadow-xl">
@@ -127,7 +131,11 @@
                 <div class="grid grid-cols-1 gap-2 p-4">
                     <p class="text-center bg-black p-2 rounded-full text-white">Tailwind</p>
                 </div>
-                <div class="flex justify-center items-center"><a href="https://web-store-frr.netlify.app/" class=" transition hover:text-blue-500">Link</a></div>
+                <div class="flex justify-center items-center">
+                    <a href="https://web-store-frr.netlify.app/" class=" transition hover:text-blue-500">Demo</a>
+                    <span class="mx-2">|</span>
+                    <a href="https://github.com/Luizfrr/web-store" class=" transition hover:text-blue-500">Código</a>
+                </div>
 
             </div>
 
